manifests/samples/plain/app01-deployment-vcluster.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apps
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app01
  name: app01
  namespace: apps
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app01
  template:
    metadata:
      labels:
        app: app01
    spec:
      containers:
      - image: ghcr.io/devopsapp84/sample-apps/app01:latest
        name: webapp
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app01
  name: app01
  namespace: apps
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: app01
  type: ClusterIP
