manifests/samples/plain/test-deployment-vcluster-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: test-vs
  namespace: k8s
spec:
  hosts:
  - "*"
  gateways:
  - istio-ingress/vcluster
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: test-x-apps-x-vcluster-k8s-123
